Added files via upload

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
   <article class="third">
     <div class="third_box">
       <div class="third_head">限時商品</div>
-      <img src="./assets/people1.png" class="third_people"/>
+      <img src="https://raw.githubusercontent.com/102820021/homework6/master/people1.png" class="third_people"/>
       <div class="third_text">TEXT TEXT TEXT </div>
-      <img src="./assets/people2.png" class="third_people"/>
+      <img src="https://raw.githubusercontent.com/102820021/homework6/master/people2.png" class="third_people"/>
       <div class="third_text">TEXT TEXT TEXT </div>
-      <img src="./assets/people3.png" class="third_people"/>
+      <img src="https://raw.githubusercontent.com/102820021/homework6/master/people3.png" class="third_people"/>
       <div class="third_text">TEXT TEXT TEXT </div>
-      <img src="./assets/people4.png" class="third_people"/>
+      <img src="https://raw.githubusercontent.com/102820021/homework6/master/people4.png" class="third_people"/>
       <div class="third_text">TEXT TEXT TEXT </div>
     </div>
     <div class="third_box">
@@ -53,24 +53,24 @@
     </div>
     <div class="third_box">
       <div class="third_head">成為商家</div>
-      <img src="./assets/people1.png" class="third_people"/>
+      <img src="https://raw.githubusercontent.com/102820021/homework6/master/people1.png" class="third_people"/>
       <div class="third_text">TEXT TEXT TEXT </div>
-      <img src="./assets/people2.png" class="third_people"/>
+      <img src="https://raw.githubusercontent.com/102820021/homework6/master/people2.png" class="third_people"/>
       <div class="third_text">TEXT TEXT TEXT </div>
-      <img src="./assets/people3.png" class="third_people"/>
+      <img src="https://raw.githubusercontent.com/102820021/homework6/master/people3.png" class="third_people"/>
       <div class="third_text">TEXT TEXT TEXT </div>
-      <img src="./assets/people4.png" class="third_people"/>
+      <img src="https://raw.githubusercontent.com/102820021/homework6/master/people4.png" class="third_people"/>
       <div class="third_text">TEXT TEXT TEXT </div>
     </div>
     <div class="third_box">
       <div class="third_head">商家資訊、評價</div>
-      <img src="./assets/people1.png" class="third_people"/>
+      <img src="https://raw.githubusercontent.com/102820021/homework6/master/people1.png" class="third_people"/>
       <div class="third_text">TEXT TEXT TEXT </div>
-      <img src="./assets/people2.png" class="third_people"/>
+      <img src="https://raw.githubusercontent.com/102820021/homework6/master/people2.png" class="third_people"/>
       <div class="third_text">TEXT TEXT TEXT </div>
-      <img src="./assets/people3.png" class="third_people"/>
+      <img src="https://raw.githubusercontent.com/102820021/homework6/master/people3.png" class="third_people"/>
       <div class="third_text">TEXT TEXT TEXT </div>
-      <img src="./assets/people4.png" class="third_people"/>
+      <img src="https://raw.githubusercontent.com/102820021/homework6/master/people4.png" class="third_people"/>
       <div class="third_text">TEXT TEXT TEXT </div>
     </div>
   </article>
